--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="js/index.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="img/truck.png">
-    <title>what vehicle are you?</title>
+    <title>who is annisa's valentine?</title>
 </head>
 
 <body>
