--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8LLQ3459GG"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="img/truck.png">
-    <title>what vehicle are you?</title>
+    <title>who's your valentine?</title>
     
     <style>
         #password-gate {
