--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
 
     <div id="password-gate">
-        <h1>💌 Enter the secret password 💌</h1>
+        <h1>💌 e Enter the secret password 💌</h1>
         <input type="password" id="password-input" placeholder="hint: it's valentine">
         <button class="unlock-btn" onclick="checkPassword()">unlock</button>
         <p id="error-message" style="color: red;"></p>
