--- a/index.html
+++ b/index.html
@@ -1,97 +1,47 @@
 <!DOCTYPE html>
-<html>
+
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8LLQ3459GG"></script>
+    <script type="text/javascript" src="js/test.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="img/truck.png">
-    <title>who's your valentine?</title>
-    
-    <style>
-        #password-gate {
-            text-align: center;
-            margin-top: 100px;
-            font-family: sans-serif;
-            display: block; /* Ensures it shows first */
-        }
-        #password-input {
-            padding: 10px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-            margin-bottom: 10px;
-        }
-        button.unlock-btn {
-            padding: 10px 20px;
-            background-color: #ff4d4d;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-    </style>
+    <title>what vehicle are you?</title>
 </head>
 
 <body>
-
-    <div id="password-gate">
-        <h1>💌 Enter the secret password 💌</h1>
-        <input type="password" id="password-input" placeholder="hint: your nicknaa,e">
-        <button class="unlock-btn" onclick="checkPassword()">unlock</button>
-        <p id="error-message" style="color: red;"></p>
-    </div>
-
-    <div id="site-content" style="display: none;">
-        <div id="start">
-            <a class="home-icon" href="index.html"><img src="img/truck.png" alt="go to home page"></a>
-            <br>
-            <img id="start-img" src="img/start.png" alt="landing page image">
-            <div class="credits">
-                <p>made by <a href="https://instagram.com/duoduo.draws">elaine</a>, <a href="https://www.instagram.com/milkglueglxy">tanya</a>, and <a href="https://www.instagram.com/lu_elyu/">lu</a> (EAT)</p>
-            </div>
-            <div class="menu">
-                <h1>what vehicle are you?</h1>
-                <button onclick="startTest()">let's find out!</button>
-                <div class="button"><a href="profiles.html">see all personality types</a></div>
-            </div>
+    <!-- start page -->
+    <div id="start">
+        <a class="home-icon" href="index.html"><img src="img/truck.png" alt="go to home page"></a>
+        <br>
+        <img id="start-img" src="img/start.png" alt="landing page image">
+        <div class="credits">
+            <p>made by <a href="https://instagram.com/duoduo.draws">elaine</a>, <a href="https://www.instagram.com/milkglueglxy">tanya</a>, and <a href="https://www.instagram.com/lu_elyu/">lu</a> (EAT)</p>
         </div>
-
-        <div id="test" hidden>
-            <img id="story-image">
-            <p id="question"></p>
-            <div id="choices"></div>
-        </div>
-
-        <div id="results" hidden>
-            <a class="home-icon" href="index.html"><img src="img/truck.png" alt="go to home page"></a>
-            <p id="results-text"></p>
-            <img id="personality">
-            <div class="menu">
-                <div class="button"><a href="profiles.html">see all personality types!</a></div>
-                <button onclick="reset()">again >:)</button>
-            </div>
+        <div class="menu">
+            <h1>what vehicle are you?</h1>
+            <button onclick="startTest()">let's find out!</button>
+            <div class="button"><a href="profiles.html">see all personality types</a></div>
         </div>
     </div>
 
-    <script>
-        // Internal password logic to ensure it works!
-        function checkPassword() {
-            const passInput = document.getElementById('password-input').value.toLowerCase();
-            const gate = document.getElementById('password-gate');
-            const content = document.getElementById('site-content');
-            const error = document.getElementById('error-message');
+    <!-- test question page -->
+    <div id="test" hidden>
+        <img id="story-image">
+        <p id="question"></p>
+        <div id="choices"></div>
+    </div>
 
-            if (passInput === 'piggy') {
-                gate.style.setProperty('display', 'none', 'important');
-                content.style.setProperty('display', 'block', 'important');
-                console.log("Success! Content shown.");
-            } else {
-                error.innerText = "Incorrect! Try again piggy ❤️";
-            }
-        }
-    </script>
-    
-    <script src="js/test.js"></script>
-    <script src="js/index.js"></script>
-
+    <!-- results page -->
+    <div id="results" hidden>
+        <a class="home-icon" href="index.html"><img src="img/truck.png" alt="go to home page"></a>
+        <p id="results-text"></p>
+        <img id="personality">
+        <p>credits: 👾 <a href="https://instagram.com/duoduo.draws">elaine</a> / 🎨 <a href="https://www.instagram.com/milkglueglxy">tanya</a>, <a href="https://instagram.com/duoduo.draws">elaine</a> / 🖋️ <a href="https://instagram.com/duoduo.draws">elaine</a> / 🪪 <a href="https://www.instagram.com/lu_elyu/">lu</a> </p>
+        <div class="menu">
+            <div class="button"><a href="profiles.html">see all personality types!</a></div>
+            <button onclick="reset()">again >:)</button>
+        </div>
+    </div>
 </body>
-</html>
